DanielV: Added images and heading to stories

--- a/kindle_templates/breakfast.ncx.erb
+++ b/kindle_templates/breakfast.ncx.erb
@@ -9,8 +9,8 @@
 <meta name="dtb:totalPageCount" content="0"/>
 <meta name="dtb:maxPageNumber" content="0"/>
 </head>
-<docTitle><text>Breakfast Politics</text></docTitle>
-<docAuthor><text>Daniel Vydra</text></docAuthor>
+<docTitle><text>Breakfast Politics for <%= todays_date %></text></docTitle>
+<docAuthor><text>breakfastpolitics.com</text></docAuthor>
   <navMap>
     <navPoint class="toc" id="toc" playOrder="1">
       <navLabel>
