--- a/kindle_templates/breakfast.opf.erb
+++ b/kindle_templates/breakfast.opf.erb
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://www.idpf.org/2007/opf" version="2.0" unique-identifier="BookId">
 <metadata xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:opf="http://www.idpf.org/2007/opf">
-	<dc:title>Breakfast Instapaper</dc:title>
+	<dc:title>Breakfast Instapaper for <%= todays_date %></dc:title>
 	<dc:language>en-us</dc:language>
   <meta name="cover" content="My_Cover" />
 	<dc:identifier id="BookId" opf:scheme="ISBN"></dc:identifier>
-	<dc:creator>Daniel Vydra</dc:creator>
-	<dc:publisher>Daniel Vydra</dc:publisher>
+	<dc:creator>breakfastpolitics.com</dc:creator>
+	<dc:publisher>breakfastpolitics.com</dc:publisher>
 	<dc:subject>Reference</dc:subject>
 	<dc:date><%= todays_date %></dc:date>
   <dc:description>A selection of Australian political news.</dc:description>
